# SIRF-SIMIND-Connection

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.sirf-simind  Dockerfile.test-without-simind  LICENSE  MANIFEST.in  Makefile  README.md  docker-compose.yaml  docker-compose.yml  make.bat  pyproject.toml  pytest-ci.ini  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  publish.yml  release.yml  tests.yml  weekly-tests.yml
docker/: README.md  compose.yaml  docker.md  install_simind.sh
docker/import_guard/: sitecustomize.py
docker/python/: Dockerfile
docker/pytomography/: Dockerfile
docker/sirf/: Dockerfile
docker/stir/: Dockerfile
docs/: api.rst  backends.rst  changelog.rst  conf.py  connector_modernization_plan.rst  contributing.rst  coordinator_architecture.md  coordinator_architecture.rst  examples.md  examples.rst  geometry.rst  index.rst  installation.rst  intro.rst  requirements.txt  testing.rst  usage.rst
examples/: 01_basic_simulation.py  02_dicom_conversion.py  02_runtime_switch_comparison.py  03_multi_window.py  04_custom_config.py  05_complete_workflow.py  05_scattwin_vs_penetrate_comparison.py  06_schneider_density_conversion.py  07A_stir_adaptor_osem.py  07B_sirf_adaptor_osem.py  07C_pytomography_adaptor_osem.py  07_simind_projector_osem.py  08A_stir_adaptor_from_dicom.py  08B_sirf_adaptor_from_dicom.py  08C_pytomography_adaptor_from_dicom.py  08_simind_coordinator_subsets.py  _python_connector_helpers.py  run_all_examples.sh
project/config/: anthro.yaml  cyl.yaml  local.yaml  nema.yaml  patient.yaml  psf.yaml  test.yaml  test_penetrate.yaml
project/scripts/: osem.py  run_all_patients.sh  run_osem.sh  run_pipeline.sh  run_pipeline_local.sh  run_simulation_array.sh  run_sum_scatter.sh  sum_scatter.py
project/single_run_config/: nema.yaml  psf.yaml  psf_r100.yaml
project_psf/: RDP.py  README.md  compare_psf_models.py  config_default.yaml  config_quick_test.yaml  debug_orbit.py  step_size_rules.py  test_coordinator_basic.py
project_psf/psf_compare/: __init__.py  callbacks.py  cluster.py  config.py  modes.py  partitioning.py  preconditioning.py  restart.py  simind.py  solver.py  spect_utils.py
py_smc/: __init__.py
py_smc/backends/: __init__.py  sirf_backend.py
py_smc/builders/: __init__.py  acquisition_builder.py  image_builder.py
py_smc/configs/: __init__.py  get_sirf_sinos.ipynb  save_as_smc.ipynb
py_smc/connectors/: base.py  python_connector.py  pytomography_adaptor.py  sirf_adaptor.py  stir_adaptor.py
py_smc/converters/: attenuation.py  simind_to_stir.py
py_smc/utils/: __init__.py  backend_access.py  sirf_stir_utils.py  stir_utils.py
scripts/: benchmark_performance.py  fix.sh  generate_test_data.py  generate_test_report.py  get_sirf_sinos.ipynb  run_all_Examples.py  run_all_examples.py  run_container_examples.sh  run_container_validation.sh  run_ls.py  setup_testing_environment.py  simind.res  simulation.py  validate_installation.py
simind_python_connector/: __init__.py
simind_python_connector/backends/: __init__.py  sirf_backend.py
simind_python_connector/builders/: acquisition_builder.py  image_builder.py
simind_python_connector/configs/: AnyScan.yaml  __init__.py  get_sirf_sinos.ipynb  save_as_smc.ipynb
simind_python_connector/connectors/: _spacing.py  base.py  python_connector.py  pytomography_adaptor.py  sirf_adaptor.py  stir_adaptor.py
simind_python_connector/converters/: attenuation.py  simind_to_stir.py
simind_python_connector/core/: types.py
simind_python_connector/data/: __init__.py
simind_python_connector/utils/: backend_access.py  io_utils.py  sirf_stir_utils.py  stir_utils.py
sirf_simind_connection/: __init__.py
sirf_simind_connection/backends/: __init__.py  base.py  sirf_backend.py  stir_backend.py
sirf_simind_connection/builders/: __init__.py  acquisition_builder.py  image_builder.py
sirf_simind_connection/configs/: AnyScan.yaml  Discovery670.yaml  Example.yaml  MLD001_SCAN0.yaml  __init__.py  get_sirf_sinos.ipynb  save_as_smc.ipynb
sirf_simind_connection/connectors/: __init__.py  base.py  python_connector.py  pytomography_adaptor.py  sirf_adaptor.py  stir_adaptor.py
sirf_simind_connection/converters/: __init__.py  attenuation.py  dicom_to_stir.py  simind_to_stir.py
sirf_simind_connection/core/: __init__.py  backend_adapter.py  components.py  config.py  coordinator.py  executor.py  file_managers.py  output_processor.py  projector.py  simulator.py  types.py
sirf_simind_connection/data/: Schneider2000.json  __init__.py
sirf_simind_connection/utils/: __init__.py  backend_access.py  cil_partitioner.py  import_helpers.py  interfile_numpy.py  interfile_parser.py  simind_utils.py  sirf_stir_utils.py  step_size_rules.py  stir_utils.py
tests/: __init__.py  conftest.py  pytest.ini  setup.cfg  test_acquisition_builder_unit.py  test_arithmetic_operations.py  test_backend_adapter.py  test_backends.py  test_callbacks_flow.py  test_cil_partitioner.py  test_components.py  test_connector_backend_separation.py  test_connectors_base.py  test_container_library_isolation.py  test_coordinator.py  test_density_conversion.py  test_dicom_converter.py  test_example_config_profile.py  test_examples_backend_separation.py  test_file_managers.py  test_geometry_isolation_forward_projection.py  test_image_builder_unit.py  test_integration.py  test_interfile_numpy.py  test_interfile_parser.py  test_marker_policy.py  test_native_adaptors.py  test_osem_geometry_diagnostics.py  test_package_identity.py  test_python_connector.py  test_pytomography_adaptor.py  test_rdp.py  test_schneider_density.py  test_simind_projector.py  test_simind_simulator.py  test_simind_to_stir_converter.py  test_simulation_config.py  test_simulator.py  test_sirf_stir_utils.py  test_step_size_rules.py  (+4 more)
