[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sirf-simind-connection"
version = "0.2.2"
description = "A wrapper for SIRF and SIMIND for Monte Carlo SPECT simulations"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"} 
authors = [
    {name = "Sam Porter", email = "sam.porter.18@ucl.ac.uk"},
    {name = "Rebecca Gillen", email = "rebecca.gillen.18@ucl.ac.uk"},
    {name = "Efstathios (Stahis) Varzakis", email = "efstathios.varzakis.22@ucl.ac.uk"},
]
maintainers = [
    {name = "Sam Porter", email = "sam.porter.18@ucl.ac.uk"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["SPECT", "Monte Carlo", "medical imaging", "SIMIND", "SIRF", "STIR"]
dependencies = [
    "numpy>=1.20.0",
    "pydicom>=2.0.0",
    "pyyaml>=5.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "pytest-mock",
    "ruff",
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
    "myst-parser",
    "pre-commit",
    "build",
    "twine",
]

[project.urls]
Homepage = "https://github.com/samdporter/SIRF-SIMIND-Connection"
Documentation = "https://sirf-simind-connection.readthedocs.io/"
Repository = "https://github.com/samdporter/SIRF-SIMIND-Connection"
Issues = "https://github.com/samdporter/SIRF-SIMIND-Connection/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["sirf_simind_connection*"]

[tool.setuptools.package-data]
sirf_simind_connection = ["data/*.atn"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["F", "E", "W", "I"]  # Include import sorting (I)

[tool.ruff.lint.isort]
# Black-compatible import sorting
force-single-line = false
lines-after-imports = 2
known-first-party = ["sirf_simind_connection"]