[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simind-python-connector"
version = "1.0.1"
description = "Python SIMIND Monte Carlo connector with STIR/SIRF/PyTomography adaptors"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [
    {name = "Sam Porter", email = "sam.porter.18@ucl.ac.uk"},
    {name = "Rebecca Gillen", email = "rebecca.gillen.18@ucl.ac.uk"},
    {name = "Efstathios (Stahis) Varzakis", email = "efstathios.varzakis.22@ucl.ac.uk"},
]
maintainers = [
    {name = "Sam Porter", email = "sam.porter.18@ucl.ac.uk"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["SPECT", "Monte Carlo", "medical imaging", "SIMIND", "SIRF", "STIR"]
dependencies = [
    "numpy>=1.20.0",
    "pydicom>=2.0.0",
    "pyyaml>=5.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "pytest-mock",
    "ruff",
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
    "myst-parser",
    "pre-commit",
    "build",
    "twine",
]
examples = [
    "matplotlib>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/samdporter/simind-python-connector"
Documentation = "https://simind-python-connector.readthedocs.io/"
Repository = "https://github.com/samdporter/simind-python-connector"
Issues = "https://github.com/samdporter/simind-python-connector/issues"
Changelog = "https://github.com/samdporter/simind-python-connector/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["simind_python_connector*"]

[tool.setuptools.package-data]
simind_python_connector = [
    "configs/*.smc",
    "configs/*.yaml",
    "data/*.atn",
    "data/*.json",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["F", "E", "W", "I"]  # Include import sorting (I)

[tool.ruff.lint.isort]
# Black-compatible import sorting
force-single-line = false
lines-after-imports = 2
known-first-party = ["simind_python_connector"]

[tool.ruff.lint.per-file-ignores]
"simind_python_connector/configs/get_sirf_sinos.ipynb" = ["E501", "E722"]
